Fix vertical align and dropdown

--- a/src/components/Projects/WBS/WBSDetail/wbs.css
+++ b/src/components/Projects/WBS/WBSDetail/wbs.css
@@ -248,6 +248,7 @@
   padding: 0;
   display: flex;
   border: .01em solid #cdcbcb;
+  align-items: center;
 }
 
 .add_new_task_form-label{
